syntax = "proto3";

package antiBruteForce;

option go_package = ".;pb";

message Empty {}

message Authorization {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message Result{
  bool result = 1;
}

message User{
  string login = 1;
  string ip = 2;
}

message Ip{
  string ip = 1;
  string mask = 2;
}

service AntiBruteForceService {
  rpc Auth (Authorization) returns (Result){
  }

  rpc CleanBucket (User) returns (Empty){
  }

  rpc AddToWhiteList(Ip) returns (Empty){
  }

  rpc DeleteFromWhiteList (Ip) returns (Empty){
  }

  rpc AddToBlackList (Ip) returns (Empty){
  }

  rpc DeleteFromBlackList (Ip) returns (Empty){
  }
}